# sample-kiro-acp-ui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kiro_acp_chat_client/: __init__.py  __main__.py  acp_client.py  controller.py  markdown_renderer.py  models.py  preferences_manager.py  process_manager.py  (+2 more)
tests/: conftest.py  test_acp_client.py  test_acp_client_properties.py  test_agent_name_propagation_properties.py  test_blockquote_rendering_properties.py  test_chatui_markdown_integration.py  test_controller.py  test_controller_properties.py  test_cwd_handling_properties.py  test_dark_mode_detection_properties.py  test_dark_mode_palette.py  test_inline_block_compose_properties.py  test_inline_delimiter_properties.py  test_inline_link_properties.py  test_inline_unmatched_delimiters_property.py  test_integration.py  test_link_counter_isolation_properties.py  test_list_rendering_properties.py  test_log_rotation.py  test_log_rotation_properties.py  test_markdown_renderer_verify.py  test_message_length_properties.py  test_models.py  test_models_properties.py  test_parse_blocks.py  test_parse_blocks_headers_properties.py  test_parse_blocks_hrule_properties.py  test_parse_blocks_properties.py  test_plain_text_transparency_properties.py  test_preference_save_completeness_properties.py  test_preferences_manager.py  test_preferences_properties.py  test_process_manager.py  test_render_block.py  test_render_inline.py  test_roundtrip_visibility_properties.py  test_stream_response.py  test_table_rendering_properties.py  test_ui.py  test_ui_properties.py
