[project]
name = "kiro-acp-chat-client"
version = "0.1.0"
description = "A desktop chat UI that communicates with Kiro CLI via the Agent Client Protocol"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kiro-acp-chat = "kiro_acp_chat_client.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiro_acp_chat_client"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
